fix ff sodo, letter spacing

--- a/top/css/containers/notification.css
+++ b/top/css/containers/notification.css
@@ -16,7 +16,7 @@
 
 .notification__block__title {
   font: inherit;
-  letter-spacing: 1.04px;
+  letter-spacing: 1.5px;
   margin-bottom: 4rem;
 }
 
@@ -32,10 +32,10 @@
 
 .notification-item__time {
   font-size: 1.3rem;
-  letter-spacing: 1.04px;
+  letter-spacing: 0.4px;
   line-height: 2.1rem;
-  flex: 0 0 18%;
-  margin-right: 0.5%;
+  flex: 0 0 16%;
+  margin-right: 1.3rem;
 }
 
 .notification-item__content {
